--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "axios": "^1.1.3",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
+    "serve": "^14.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
